=================
Changes for crash
=================

Unreleased
==========

Changes
-------

 - Added support for pasting and executing multiple statements at once.

Fixes
-----

 - Do not show connect message on startup by default but only when starting
   crash in verbose mode. This prevents the programme from printing the message
   to stdout when using the command mode or executing ``--sysinfo``.

2017/10/11 0.22.2
=================

 - Fixed an issue where BACKSPACE would delete more characters before the
   cursor than expected.

 - Added back support for multiline table headers

2017/08/21 0.22.1
=================

 - Remove support for multiline table headers

2017/08/21 0.22.0
=================

 - Added a status toolbar that prints the current session info.

 - added support for multiline table headers in the tabular output format

 - Start autocompletion for non-command keys at the 3rd character.

2017/08/21 0.21.5
=================

 - Updated crate-python to 0.20.1 which includes the following change:

   - Fixed deprecation warnings logged in CrateDB server on every REST request.

2017/07/24 0.21.4
=================

 - Fixed: ``\verbose`` command didn't not switch on verbosity if ``crash`` was
   launched without the ```--verbose` flag.

2017/07/11 0.21.3
=================

 - Expanded the list of keywords used by autocompletion and
   autocapitalization.

2017/07/06 0.21.2
=================

 - Fixed bug that caused ``crash`` to crash on startup when using Python 2.7.

2017/07/04 0.21.1
=================

 - Expanded the list of keywords used by autocompletion and
   autocapitalization.

 - Show error message before prompting the user to reconnect with ``\connect``
   if the ``verbose`` is set.

 - Added new command ``verbose`` to be able to toggle verbosity ON & OFF from
   within Crash without the need to exit and reconnect.

 - Print only error message instead of full stacktrace in case of wrongly
   formatted hosts parameter.
