@@ -10,6 +10,9 @@ Changes
 
  - Added support for pasting and executing multiple statements at once.
 
+ - The `\r` (read) command auto-completion now also shows directories, instead
+   of only files ending in `.sql`
+
 Fixes
 -----
 
